correction wrap hebergement

--- a/css/style.css
+++ b/css/style.css
@@ -306,6 +306,8 @@ main {
     display: flex;
     gap: 30px;
     width: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .hebergements-cards .card {
